feat: removed placeholder and added confirm password

--- a/pages/register.html
+++ b/pages/register.html
@@ -25,27 +25,25 @@
                 </li>
                 <li class="navbar__list__items">
                     <a href="./login.html">
-                        <button class="btn btn__secondary">
-                            Login
-                        </button>
+                        <button class="btn btn__secondary">Login</button>
                     </a>
                 </li>
 
                 <li class="navbar__list__items">
                     <a href="./wishlist.html">
                         <span class="badge__icons">
-                            <i class="fa-regular fa-heart icon"></i>
-                            <span class="badge__number badge__primary">5</span>
+                <i class="fa-regular fa-heart icon"></i>
+                <span class="badge__number badge__primary">5</span>
                         </span>
                     </a>
                 </li>
                 <li class="navbar__list__items">
                     <a href="./cart.html">
                         <span class="badge__icons">
-                            <i class="fa-solid fa-cart-shopping icon"></i>
-                            <span class="badge__number badge__primary">5</span>
+                <i class="fa-solid fa-cart-shopping icon"></i>
+                <span class="badge__number badge__primary">5</span>
+                        </span>
                     </a>
-                    </span>
                 </li>
             </ul>
         </nav>
@@ -60,7 +58,6 @@
                 type="text"
                 id="first__name"
                 name="first__name"
-                placeholder="First Name"
                 class="form__group__input"
               />
             </label>
@@ -70,7 +67,6 @@
                 type="text"
                 id="last__name"
                 name="last__name"
-                placeholder="Last Name"
                 class="form__group__input"
               />
             </label>
@@ -81,7 +77,6 @@
               type="text"
               id="username"
               name="username"
-              placeholder="Enter your email"
               class="form__group__input"
             />
           </label>
@@ -91,7 +86,15 @@
               type="password"
               id="password"
               name="password"
-              placeholder="Enter your password"
+              class="form__group__input"
+            />
+          </label>
+                <label for="password">
+            Confirm Password
+            <input
+              type="password"
+              id="password"
+              name="password"
               class="form__group__input"
             />
           </label>
@@ -101,9 +104,7 @@
               I accept all terms & conditions
             </label>
                 </div>
-                <button class="btn btn__primary login">
-            Create a new Account
-          </button>
+                <button class="btn btn__primary login">Create a new Account</button>
                 <div class="register text__center">
                     <a href="./login.html">Already have an account ></a>
                 </div>
