feat: toggle for seeing password while entering

--- a/pages/register.html
+++ b/pages/register.html
@@ -80,37 +80,43 @@
               class="form__group__input"
             />
           </label>
-                <label for="password">
+                <label for="pass">
             Password
             <input
               type="password"
-              id="password"
-              name="password"
+              id="pass"
+              name="pass"
               class="form__group__input"
             />
           </label>
-                <label for="password">
+
+                <label for="confirm__password">
             Confirm Password
             <input
               type="password"
-              id="password"
-              name="password"
+              id="confirm__password"
+              name="confirm__password"
               class="form__group__input"
             />
           </label>
-                <div class="form__bottom">
-                    <label class="text__md">
+                <label>
+            <input type="checkbox" class="show__password text__md" /> Show
+            Password</label
+          >
+          <div class="form__bottom">
+            <label class="text__md">
               <input type="checkbox" />
               I accept all terms & conditions
             </label>
-                </div>
-                <button class="btn btn__primary login">Create a new Account</button>
-                <div class="register text__center">
-                    <a href="./login.html">Already have an account ></a>
-                </div>
+            </div>
+            <button class="btn btn__primary login">Create a new Account</button>
+            <div class="register text__center">
+                <a href="./login.html">Already have an account ></a>
             </div>
         </div>
     </div>
+    </div>
+    <script src="../javascript/register.js"></script>
 </body>
 
 </html>
