style: change login button to primary

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -25,28 +25,26 @@
                     <input type="text" class="search" placeholder="  🔍Search" />
                 </li>
                 <li class="navbar__list__items">
-                    <a href="./login.html">
-                        <button class="btn btn__secondary">
-                            Login
-                        </button>
+                    <a href="./logout.html">
+                        <button class="btn btn__primary">Logout</button>
                     </a>
                 </li>
 
                 <li class="navbar__list__items">
                     <a href="./wishlist.html">
                         <span class="badge__icons">
-                            <i class="fa-regular fa-heart icon"></i>
-                            <span class="badge__number badge__primary">5</span>
+                <i class="fa-regular fa-heart icon"></i>
+                <span class="badge__number badge__primary">5</span>
                         </span>
                     </a>
                 </li>
                 <li class="navbar__list__items">
                     <a href="./cart.html">
                         <span class="badge__icons">
-                            <i class="fa-solid fa-cart-shopping icon"></i>
-                            <span class="badge__number badge__primary">5</span>
+                <i class="fa-solid fa-cart-shopping icon"></i>
+                <span class="badge__number badge__primary">5</span>
+                        </span>
                     </a>
-                    </span>
                 </li>
             </ul>
         </nav>
@@ -54,8 +52,8 @@
         <div class="main__container">
             <div class="card card__horizontal card__shadow">
                 <span class="card__image">
-                    <img src="../assets/image.jpg" alt="card Image" />
-                </span>
+            <img src="../assets/image.jpg" alt="card Image" />
+          </span>
                 <div class="card__footer">
                     <span class="card__title">Super Mario</span>
                     <div class="card__details">
@@ -66,18 +64,16 @@
                     <div class="card__quantity text__md">
                         <label for="quantity">Quantity:</label>
                         <select id="cars" name="cars">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                        </select>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
                     </div>
-                    <hr>
+                    <hr />
                     <div class="card__buttons">
-                        <button class="btn btn__error__outlined">
-                            Remove from Cart
-                        </button>
+                        <button class="btn btn__error__outlined">Remove from Cart</button>
                         <button class="btn btn__primary">Move to wish list</button>
                     </div>
                 </div>
