--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -25,8 +25,8 @@
                     <input type="text" class="search" placeholder="  🔍Search" />
                 </li>
                 <li class="navbar__list__items">
-                    <a href="./login.html">
-                        <button class="btn btn__secondary">Login</button>
+                    <a href="./logout.html">
+                        <button class="btn btn__primary">Logout</button>
                     </a>
                 </li>
 
