--- a/pages/products.html
+++ b/pages/products.html
@@ -28,7 +28,7 @@
                 </li>
                 <li class="navbar__list__items">
                     <a href="./login.html">
-                        <button class="btn btn__secondary">
+                        <button class="btn btn__primary">
                             Login
                         </button>
                     </a>
