--- a/pages/register.html
+++ b/pages/register.html
@@ -25,7 +25,7 @@
                 </li>
                 <li class="navbar__list__items">
                     <a href="./login.html">
-                        <button class="btn btn__secondary">Login</button>
+                        <button class="btn btn__primary">Login</button>
                     </a>
                 </li>
 
